fix(accordion, accordion-item): now wraps long words in header (title & description)

--- a/src/components/accordion-item/accordion-item.scss
+++ b/src/components/accordion-item/accordion-item.scss
@@ -102,6 +102,7 @@
     items-center
     duration-150
     ease-in-out;
+  word-break: break-word;
 }
 
 :host .content {
